--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -2,6 +2,8 @@
 @import "./phoenix.css";
 @import "../node_modules/nprogress/nprogress.css";
 
+@import "./tabs";
+
 html, body {
   margin: 0;
   padding: 0;
