--- a/lib/dogistics_web/live/run_live.html.leex
+++ b/lib/dogistics_web/live/run_live.html.leex
@@ -8,7 +8,7 @@
         <ul>
           <%= for leg <- @legs do %>
             <li phx-hook="Leg">
-              <strong><%= leg.start_point %> to <%= leg.end_point %></strong>
+              <strong><%= leg.start_point.location %> to <%= leg.end_point.location %></strong>
               <%= link "Delete", to: "#",
                     phx_click: "delete_leg",
                     phx_value_id: leg.id %>
@@ -31,8 +31,9 @@
           <%
             last_leg = List.last(@legs) || %{end_point: nil, dogs: []}
           %>
-          <%= text_input :leg, :start_point, placeholder: "Start Point", value: last_leg.end_point %>
-          <%= text_input :leg, :end_point, placeholder: "End Point" %>
+          <%#= text_input :start_point, :location, placeholder: "Start Point", value: last_leg.end_point %>
+          <%= text_input :start_point, :location, placeholder: "Start Point", value: "Pittsburgh, PA" %>
+          <%= text_input :end_point, :location, placeholder: "End Point", value: "Philadelphia, PA" %>
 
           <%= for dog <- @dogs do %>
             <% checked = Enum.member?(last_leg.dogs, dog) %>
