--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -4,6 +4,25 @@
 
 @import "./tabs";
 
+$blue-light: rgb(0, 122, 255);
+$blue-dark: rgb(10, 132, 255);
+$green-light: rgb(52, 199, 89);
+$green-dark: rgb(48, 209, 88);
+$indigo-light: rgb(88, 86, 214);
+$indigo-dark: rgb(94, 92, 230);
+$orange-light: rgb(255, 149, 0);
+$orange-dark: rgb(255, 159, 10);
+$pink-light: rgb(255, 45, 85);
+$pink-dark: rgb(255, 55, 95);
+$purple-light: rgb(175, 82, 222);
+$purple-dark: rgb(191, 90, 242);
+$red-light: rgb(255, 59, 48);
+$red-dark: rgb(255, 69, 58);
+$teal-light: rgb(90, 200, 250);
+$teal-dark: rgb(100, 210, 255);
+$yellow-light: rgb(255, 204, 0);
+$yellow-dark: rgb(255, 214, 10);
+
 html, body {
   margin: 0;
   padding: 0;
@@ -12,6 +31,7 @@ html, body {
 .map__main {
   display: flex;
   height: 100vh;
+
 }
 
 .map__section {
@@ -21,10 +41,43 @@ html, body {
     width: 100%;
     height: 100%;
   }
+
+  .marker {
+    width: 18px;
+    padding: 3px;
+
+    line-height: 1;
+    background-color: white;
+
+    font-size: 8px;
+    text-align: center;
+
+    border-style: solid;
+    border-width: 2px;
+    border-color: $yellow-light;
+    border-radius: 12px;
+
+    &--pick-up {
+      border-color: $green-light;
+    }
+
+    &--drop-off {
+      border-color: $red-light;
+    }
+
+    &--neutral {
+      width: 4px;
+      height: 4px;
+      padding: 0;
+
+      border-width: 5px;
+    }
+  }
 }
 
 .map__aside {
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   padding: 16px;
   width: 30%;
 
@@ -32,6 +85,18 @@ html, body {
     list-style: none;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .map__main {
+    flex-direction: column;
+  }
+
+  .map__aside {
+    width: 100%;
+    height: 30%;
+  }
+}
+
 
 /* LiveView specific classes for your customizations */
 .invalid-feedback {
