--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -84,6 +84,22 @@ html, body {
   ul {
     list-style: none;
   }
+
+  .before,
+  .after {
+    display: none;
+  }
+
+  li.enter {
+    // .before,
+    // .after {
+    //   display: block;
+    // }
+  }
+
+  .enter {
+    background-color: $blue-light;
+  }
 }
 
 @media screen and (max-width: 768px) {
